'wine list styled

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,37 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
+  background-color: rgb(98, 8, 8);
+  color: wheat;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-around;
+  text-align: center;
+}
+
+.wine-list {
+  display: flex;
+  flex-wrap: wrap;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 80%;
+  margin: 1em 10%;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.wine-card{
+  width: 300px;
+  text-align: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.wine-card img {
+  height: 300px;
+  max-width: 70%;
+}
+
+button {
+  font-size: 24 px;
+  color: rgb(98, 8, 8);
+  background-color: wheat;
+  border: none;
+  border-radius: 8px;
+  padding: 8px, 40px;
 }
